<resources>
    <string name="app_name">The New York Times</string>
    <string name="title_activity_content_search">ContentSearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>

    <string name="begin_date">Begin Date</string>
    <string name="select_date">Select Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="paid_subscription">Paid Subscription</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>

    <string name="no_internet_text">You are not connected to Internet.\n Check your internet connection</string>
    <string name="snackbar_internet_action_text">Turn on Internet</string>

</resources>