<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <TextView
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDate"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="mm/dd/yyyy"
        android:id="@+id/etBeginDate"
        android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSort"
        android:paddingTop="20dp"
        android:layout_below="@+id/llDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSortOrder"
        android:entries="@array/sort_order_array"
        android:prompt="@string/sort_order"
        android:spinnerMode="dropdown"
        android:layout_weight="1">
    </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNews"
        android:paddingTop="20dp"
        android:layout_below="@+id/llSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="News Desk Values"
        android:id="@+id/tvNewsDesk"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                android:layout_below="@+id/spinnerSortOrder"
                android:layout_centerHorizontal="true"
             />
            <CheckBox
                android:id="@+id/checkbox_fashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_style"
                android:layout_below="@+id/checkbox_arts"
                android:layout_alignLeft="@+id/checkbox_arts"
                android:layout_alignStart="@+id/checkbox_arts" />
            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:layout_below="@+id/checkbox_fashion"
                android:layout_alignLeft="@+id/checkbox_fashion"
                android:layout_alignStart="@+id/checkbox_fashion" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llbtn"
        android:layout_below="@+id/llNews"
        android:orientation="horizontal"
        android:paddingTop="50dp">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btnSave"
        android:layout_weight="1"
        android:background="@color/primary_light"/>

    </LinearLayout>

</RelativeLayout>
